binread/tests/errors/unsupported_type_union.rs
use binread::BinRead;

#[derive(BinRead)]
union Bar {
    a: i32,
}

fn main() {}
